[package]
name = "intervaltree"
documentation = "https://docs.rs/intervaltree"
repository = "https://github.com/main--/rust-intervaltree"
version = "0.2.2"
authors = ["main() <main@ehvag.de>"]
license = "MIT"
description = "A simple and generic implementation of an immutable interval tree."

[dependencies]
smallvec = "0.4"
