[package]
name = "intervaltree"
documentation = "https://docs.rs/intervaltree"
repository = "https://github.com/main--/rust-intervaltree"
version = "0.2.4"
authors = ["main() <main@ehvag.de>"]
license = "MIT"
description = "A simple and generic implementation of an immutable interval tree."
categories = ["data-structures", "no-std"]

[dependencies]
smallvec = { version = "0.6", default-features = false }

[features]
std = ["smallvec/std"]
default = ["std"]
