[package]
name = "intervaltree"
documentation = "https://docs.rs/intervaltree"
repository = "https://github.com/main--/rust-intervaltree"
version = "0.2.7"
authors = ["main() <main@ehvag.de>"]
license = "MIT"
description = "A simple and generic implementation of an immutable interval tree."
categories = ["data-structures", "no-std"]
edition = "2018"

[dependencies]
smallvec = { version = "1.0.0" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }

[features]
std = []
default = ["std"]
